--- a/Visualization/CCPP.ipynb
+++ b/Visualization/CCPP.ipynb
@@ -394,13 +394,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The intercept, 1st coefficient & 2nd coefficient are as follows\n",
       "505.5553602252643\n",
       "-1.7045879238058852\n",
       "-0.3256890784641872\n"
@@ -410,7 +411,7 @@
    "source": [
     "reg = LinearRegression()  \n",
     "reg.fit(X_train, y_train)\n",
-    "print (\"The intercept, 1st coefficient \")\n",
+    "print (\"The intercept, 1st coefficient & 2nd coefficient are as follows\")\n",
     "print (reg.intercept_)\n",
     "print (reg.coef_[0])\n",
     "print (reg.coef_[1])\n"
