new ipynb for phase 3

--- a/Visualization/CCPP.ipynb
+++ b/Visualization/CCPP.ipynb
@@ -368,21 +368,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = data[['Avg_Temp', 'Vacuum']].values\n",
+    "X = data[['Avg_Temp', 'Vacuum', 'Avg_Pressure', 'Humidity']].values\n",
     "y = data['Output'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)"
    ]
   },
   {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -402,9 +402,11 @@
      "output_type": "stream",
      "text": [
       "The intercept, 1st coefficient & 2nd coefficient are as follows\n",
-      "505.5553602252643\n",
-      "-1.7045879238058852\n",
-      "-0.3256890784641872\n"
+      "449.7885001787565\n",
+      "-1.9754534616090211\n",
+      "-0.23469969057167422\n",
+      "0.06674801731432589\n",
+      "-0.15667501343006845\n"
      ]
     }
    ],
@@ -414,7 +416,9 @@
     "print (\"The intercept, 1st coefficient & 2nd coefficient are as follows\")\n",
     "print (reg.intercept_)\n",
     "print (reg.coef_[0])\n",
-    "print (reg.coef_[1])\n"
+    "print (reg.coef_[1])\n",
+    "print (reg.coef_[2])\n",
+    "print (reg.coef_[3])\n"
    ]
   },
   {
@@ -426,16 +430,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error: 3.884249854471419\n",
-      "Mean Squared Error: 24.124802502223126\n",
-      "Root Mean Squared Error: 4.911700571311644\n"
+      "Mean Absolute Error: 3.595407279825709\n",
+      "Mean Squared Error: 20.28012295369089\n",
+      "Root Mean Squared Error: 4.503345751071184\n"
      ]
     }
    ],
@@ -448,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -457,30 +461,34 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:                      y   R-squared:                       0.916\n",
-      "Model:                            OLS   Adj. R-squared:                  0.916\n",
-      "Method:                 Least Squares   F-statistic:                 2.599e+05\n",
+      "Dep. Variable:                      y   R-squared:                       0.929\n",
+      "Model:                            OLS   Adj. R-squared:                  0.929\n",
+      "Method:                 Least Squares   F-statistic:                 1.558e+05\n",
       "Date:                Wed, 31 Jul 2019   Prob (F-statistic):               0.00\n",
-      "Time:                        01:04:57   Log-Likelihood:            -1.4444e+05\n",
-      "No. Observations:               47840   AIC:                         2.889e+05\n",
-      "Df Residuals:                   47837   BIC:                         2.889e+05\n",
-      "Df Model:                           2                                         \n",
+      "Time:                        02:05:58   Log-Likelihood:            -1.4044e+05\n",
+      "No. Observations:               47840   AIC:                         2.809e+05\n",
+      "Df Residuals:                   47835   BIC:                         2.809e+05\n",
+      "Df Model:                           4                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "const        505.4774      0.108   4700.480      0.000     505.267     505.688\n",
-      "x1            -1.7043      0.006   -300.629      0.000      -1.715      -1.693\n",
-      "x2            -0.3245      0.003    -97.603      0.000      -0.331      -0.318\n",
+      "const        454.6093      4.359    104.298      0.000     446.066     463.152\n",
+      "x1            -1.9775      0.007   -289.278      0.000      -1.991      -1.964\n",
+      "x2            -0.2339      0.003    -71.842      0.000      -0.240      -0.228\n",
+      "x3             0.0621      0.004     14.681      0.000       0.054       0.070\n",
+      "x4            -0.1581      0.002    -84.806      0.000      -0.162      -0.154\n",
       "==============================================================================\n",
-      "Omnibus:                     2616.566   Durbin-Watson:                   2.005\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             8933.346\n",
-      "Skew:                          -0.198   Prob(JB):                         0.00\n",
-      "Kurtosis:                       5.080   Cond. No.                         282.\n",
+      "Omnibus:                     4436.946   Durbin-Watson:                   2.005\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            20433.886\n",
+      "Skew:                          -0.352   Prob(JB):                         0.00\n",
+      "Kurtosis:                       6.123   Cond. No.                     2.13e+05\n",
       "==============================================================================\n",
       "\n",
       "Warnings:\n",
-      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 2.13e+05. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
      ]
     }
    ],
@@ -490,6 +498,13 @@
     "est2 = est.fit()\n",
     "print(est2.summary())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
